--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/INVALIDUMRP/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <main id="logo">
-                <img src="/IMAGENS/LOGO-WHITE2.png" title="LOGO"> 
+                <img src="/INVALIDUMRP/IMAGENS/LOGO-WHITE2.png" title="LOGO"> 
         </main><!--LOGO-->
         <section>
             <div class="control-menu">
@@ -28,11 +28,11 @@
             </div><!--control-menu-->
         </section> <!--SECTION-->
         <picture>
-            <img src="/IMAGENS/Banner.png" alt="">
+            <img src="/INVALIDUMRP/IMAGENS/Banner.png" alt="">
         </picture><!--BANNER-->
         <main id="regras">
             <div class="control-regras">
-                <img src="/IMAGENS/RIVER.png" title="ATENÇÃO!!">
+                <img src="/INVALIDUMRP/IMAGENS/RIVER.png" title="ATENÇÃO!!">
                 <div CLASS="control-text">
                     <h1>IMPORTANTE, LEIA!</h1>
                     <p>1 • NÃO VENDEMOS CONTAS DE GTA V!</p>
@@ -99,10 +99,10 @@
                 <div class="produto">
                     <div class="nivel-conta1" title="CONTA BASIC">
                         <h2>BASIC</h2>
-                        <img src="/IMAGENS/estrela.png">
+                        <img src="/INVALIDUMRP/IMAGENS/estrela.png">
                     </div>
                     <a href="#">
-                        <img src="/IMAGENS/cartao.png" alt="cartão">
+                        <img src="/INVALIDUMRP/IMAGENS/cartao.png" alt="cartão">
                     </a><!--CARTAO-->
                     <div class="botao">
                         <button  id="detalhes" title="DETALHES">DETALHES</button>
@@ -112,8 +112,8 @@
                 <div class="produto" title="CONTA PREMIUM">
                     <div class="nivel-conta2">
                         <h2>PREMIUM</h2>
-                        <img src="/IMAGENS/estrela.png">
-                        <img src="/IMAGENS/estrela.png">
+                        <img src="/INVALIDUMRP/IMAGENS/estrela.png">
+                        <img src="/INVALIDUMRP/IMAGENS/estrela.png">
                     </div>
                     <a href="#">
                         <img src="/IMAGENS/cartao2.png" alt="cartão">
@@ -126,12 +126,12 @@
                 <div class="produto" title="CONTA DELUXE">
                     <div class="nivel-conta3">
                         <h2>DELUXE</h2>
-                        <img src="/IMAGENS/estrela.png">
-                        <img src="/IMAGENS/estrela.png">
-                        <img src="/IMAGENS/estrela.png">
+                        <img src="/INVALIDUMRP/IMAGENS/estrela.png">
+                        <img src="/INVALIDUMRP/IMAGENS/estrela.png">
+                        <img src="/INVALIDUMRP/IMAGENS/estrela.png">
                     </div>
                     <a href="#">
-                        <img src="/IMAGENS/cartao3.png" alt="cartão">
+                        <img src="/INVALIDUMRP/IMAGENS/cartao3.png" alt="cartão">
                     </a><!--CARTAO-->
                     <div class="botao">
                         <button  id="detalhes3" title="DETALHES">DETALHES</button>
@@ -159,6 +159,6 @@
             <h1>@2022 - Invalidum RP</h1>
         </footer>
     </div><!--CONTAINER-->
-    <script src="/SCRIPTS/app.js"></script>
+    <script src="/INVALIDUMRP/SCRIPTS/app.js"></script>
 </body>
 </html>
