--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <img src="/INVALIDUMRP/IMAGENS/estrela.png">
                     </div>
                     <a href="#">
-                        <img src="/IMAGENS/cartao2.png" alt="cartão">
+                        <img src="/INVALIDUMRP/IMAGENS/cartao2.png" alt="cartão">
                     </a><!--CARTAO-->
                     <div class="botao">
                         <button  id="detalhes2" title="DETALHES">DETALHES</button>
