--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
                     </ul>
                 </nav>
             </div><!--control-menu-->
+            <div class="control-menu2">
+                <nav>
+                    <ul>
+                        <li title="HOME"><a href="#">HOME</a></li>
+                        <li title="PRODUTOS"><a href="#produtos">PRODUTOS</a></li>
+                        <li title="CONTATO"><a href="#contato">CONTATO</a></li>
+                    </ul>
+                </nav>
+            </div><!--control-menu-->
         </section> <!--SECTION-->
         <picture>
             <img src="/INVALIDUMRP/IMAGENS/Banner.png" alt="">
